[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/MarieMade/Respawns/unactivated_respawn.png" type="Texture" id=1]
[ext_resource path="res://Assets/MarieMade/Respawns/activated_respawn.png" type="Texture" id=2]
[ext_resource path="res://Checkpoint/Checkpoint.gd" type="Script" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 37.0

[sub_resource type="Animation" id=2]
resource_name = "Idle"
length = 10.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("ActiveCheckpoint:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 10 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("NotActiveCheckpoint:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 10 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0 ]
}

[node name="Checkpoint" type="Node2D" groups=["Checkpoint"]]
scale = Vector2( 0.5, 0.5 )
script = ExtResource( 3 )

[node name="NotActiveCheckpoint" type="Sprite" parent="."]
scale = Vector2( 1.3, 1.3 )
texture = ExtResource( 1 )

[node name="ActiveCheckpoint" type="Sprite" parent="."]
scale = Vector2( 1.3, 1.3 )
texture = ExtResource( 2 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 6

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Idle = SubResource( 2 )

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
